# relaybot

./: .gitignore  CLAUDE.md  README.md  example.config.py  example.config.toml  main.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: annotator.yml  formatting.yml  isort.yml
cogs/: admin.py  parkour.py  relay.py  stats.py  tournament.py
cogs/utils/: crashes.py  utils.py
leaderboard/: index.html  script.js  style.css
leaderboard/servers/: history.css  history.html  history.js  index.html  script.js  style.css
mods/MentalEdge.BetterTeamBalance/: mod.json
mods/MentalEdge.BetterTeamBalance/mod/scripts/vscripts/: teambalance.nut  tonefetcher.nut
mods/laundmo.parseablelogs/: mod.json
mods/laundmo.parseablelogs/mod/scripts/vscripts/: laundmo_parseable_logs.nut
tourney/: loadout0.json  loadout1.json  loadout2.json  loadout3.json  loadout4.json  loadout5.json  loadout6.json  loadout7.json  loadout8.json  loadout9.json
