[project]
name = "relaybot"
version = "0.1.0"
description = "northstar relay bot"
authors = [{ name = "Bobbyperson", email = "bobbyperson12345@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
license = "GNU GPLv3"
dependencies = [
    "discord.py[voice]>=2.5.2",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "requests>=2.32.3",
    "aiohttp>=3.11.16",
    "python-dateutil>=2.9.0.post0",
    "keyring>=25.6.0",
    "discord-pretty-help>=2.0.7",
    "rcon>=2.4.9",
    "humanize>=4.12.2",
    "pillow>=11.1.0",
    "anyio>=4.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[tool.uv]
package = false

[tool.ruff.lint]
select = [
    "A004", # Check for import shadowing builtin functions: https://docs.astral.sh/ruff/rules/builtin-import-shadowing/
    "RUF",
    "UP",
    "I",
    "ASYNC",
    "F",
    "FURB",
    "PLC",
]
extend-ignore = [
    "ASYNC110", # I don't care
    "ASYNC221",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
