[project]
name = "relaybot"
version = "0.1.0"
description = "northstar relay bot"
authors = [{ name = "Bobbyperson", email = "bobbyperson12345@gmail.com" }]
requires-python = ">=3.14"
readme = "README.md"
license = "GNU GPLv3"
dependencies = [
    "discord.py[voice]>=2.7.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "requests>=2.32.5",
    "aiohttp>=3.13.3",
    "python-dateutil>=2.9.0.post0",
    "keyring>=25.7.0",
    "discord-pretty-help>=2.0.7",
    "rcon>=2.4.9",
    "humanize>=4.15.0",
    "pillow>=12.1.1",
    "anyio>=4.12.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.uv]
package = false

[tool.ruff.lint]
select = [
    "A004", # Check for import shadowing builtin functions: https://docs.astral.sh/ruff/rules/builtin-import-shadowing/
    "RUF",
    "UP",
    "I",
    "ASYNC",
    "F",
    "FURB",
    "PLC",
]
extend-ignore = [
    "ASYNC110", # I don't care
    "ASYNC221",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
